add: tips, blog, popularPlace

--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,12 @@
                             and manage your budget in one place. -->
                         </div>
                         <div class="starting__btns">
-                            <div class="start__trip">Start your trip</div>
-                            <div class="contact__us">Contact us</div>
+                            <div class="start__trip">
+                                <a href="/routes" style="text-decoration: none">Start your trip</a>
+                            </div>
+                            <div class="contact__us">
+                                <a href="/contacts" style="text-decoration: none; color: black">Contact us</a>
+                            </div>
                         </div>
                     </div>
                     <div class="photo__lock photo animate__animated animate__fadeInRight">
@@ -174,7 +178,9 @@
                                     <div class="text__for-support">Pay-per-session workshops</div>
                                     <div class="lineSupport"></div>
                                 </div>
-                                <button style="margin-top: 30px" class="writeUs">Write to us</button>
+                                <button style="margin-top: 30px" class="writeUs">
+                                    <a href="/contacts" style="text-decoration: none">Write to us</a>
+                                </button>
                             </div>
                             <div class="consult__photo">
                                 <img src="./_img/Square-Asset-Support-Services.webp" alt="" />
