--- a/public/otherHTML/blog.html
+++ b/public/otherHTML/blog.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
         <link rel="stylesheet" href="../css/blog.css" />
         <title>Document</title>
     </head>
@@ -26,7 +28,102 @@
                     <div class="account" id="account"></div>
                 </div>
             </header>
-            <nav>Blog</nav>
+            <nav>
+                <div class="leftSide">
+                    <div class="nav__main-text animate__fadeIn animate__animated">
+                        Blog: helpful <br />
+                        information
+                    </div>
+                    <div class="nav__desc animate__animated animate__fadeInUp">
+                        In our blog, you will find useful tips, exciting travel routes, and inspiring stories for your
+                        adventures. We share life hacks, budget travel recommendations, destination reviews, and
+                        everything you need to make your trip unforgettable!
+                    </div>
+                    <button id="getTips" class="toSendMassage animate__animated animate__fadeInUp">Get help</button>
+                </div>
+                <div class="rigthSide animate__animated animate__fadeInRight">
+                    <img src="../_img/Migration-675px.webp" alt="" />
+                </div>
+            </nav>
+            <div class="centeralSide">
+                <div class="container">
+                    <h2>📝 Travel Checklists & Guides</h2>
+
+                    <div class="section">
+                        <h3>📌 Travel Checklists</h3>
+                        <ul>
+                            <li><b>🌞 Summer Trip:</b> Sunscreen, sunglasses, hat, light clothing.</li>
+                            <li><b>❄️ Winter Trip:</b> Warm jacket, gloves, scarf, insulated boots.</li>
+                            <li><b>🎒 Hiking:</b> Tent, sleeping bag, water purifier, map, flashlight.</li>
+                        </ul>
+                    </div>
+
+                    <div class="section">
+                        <h3>🆘 What to Do in Emergencies?</h3>
+                        <p>
+                            <b>✈️ Lost Baggage:</b> Check the luggage belt, report to Lost & Found, fill a PIR form, and
+                            request compensation.
+                        </p>
+                        <p>
+                            <b>📜 Lost Passport:</b> Contact the embassy, file a police report, show a copy of your
+                            passport (if available), and get emergency documents.
+                        </p>
+                        <p>
+                            <b>🚗 Lost Wallet/Cards:</b> Block your cards, check for digital payment options, report
+                            theft, and use money transfer services.
+                        </p>
+                        <p>
+                            <b>📱 Lost Phone:</b> Try tracking with Google/Apple services, lock the device remotely,
+                            report to authorities, and change passwords.
+                        </p>
+                    </div>
+
+                    <div class="section">
+                        <h3>🔧 Useful Travel Tools</h3>
+                        <ul>
+                            <li><b>Google Maps:</b> Offline maps & routes.</li>
+                            <li><b>Skyscanner:</b> Find the best flight deals.</li>
+                            <li><b>PackPoint:</b> Smart packing checklist.</li>
+                            <li><b>Rome2Rio:</b> Best travel routes.</li>
+                            <li><b>XE Currency:</b> Currency converter.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="bottomSide">
+                <div class="main__bottom-nav">
+                    <div class="bottom__info">
+                        <div class="bottom__logo">TriPsting</div>
+                        <div class="bottom__desc">We make it easy and fun to plan your next adventure.</div>
+                    </div>
+                    <div class="bottom__navigation">
+                        <h2 class="navText">Navigations:</h2>
+                        <p class="navBtns"><a href="/home">Home</a></p>
+                        <p class="navBtns"><a href="/routes">Routes</a></p>
+                        <p class="navBtns"><a href="/PopularPlaces">Popular places</a></p>
+                        <p class="navBtns"><a href="/tips">Tips</a></p>
+                        <p class="navBtns"><a href="/blog">Blog</a></p>
+                        <p class="navBtns"><a href="/contacts">Contact</a></p>
+                    </div>
+                    <div class="bottom__buttons">
+                        <h2>Buttons:</h2>
+                        <button>Start your trip</button>
+                        <button>Contact us</button>
+                    </div>
+                    <div class="bottom__social">
+                        <h2>Social:</h2>
+                        <div class="icons__social">
+                            <i class="fa-brands fa-telegram"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom__company">©️ 2024 TriPsting</div>
+            </div>
         </div>
+        <script src="https://kit.fontawesome.com/ce0dbffcde.js" crossorigin="anonymous"></script>
+        <script src="../otherJS/blog.js"></script>
     </body>
 </html>
