--- a/public/otherHTML/popularPlaces.html
+++ b/public/otherHTML/popularPlaces.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
         <link rel="stylesheet" href="../css/popularPlaces.css" />
         <title>Document</title>
     </head>
@@ -26,7 +28,136 @@
                     <div class="account" id="account"></div>
                 </div>
             </header>
-            <nav>Popular places</nav>
+            <nav>
+                <div class="leftSide">
+                    <div class="nav__main-text animate__fadeIn animate__animated">
+                        Best Worldwide <br />
+                        Destinations for trips
+                    </div>
+                    <div class="nav__desc animate__animated animate__fadeInUp">
+                        Discover the world's most famous destinations! From breathtaking natural wonders to vibrant
+                        cities and historic landmarks, explore places that leave unforgettable memories. Whether you
+                        seek adventure, culture, or relaxation, our selection of top travel spots has something for
+                        every traveler.
+                    </div>
+                    <button id="getTips" class="toSendMassage animate__animated animate__fadeInUp">Get places</button>
+                </div>
+                <div class="rigthSide animate__animated animate__fadeInRight">
+                    <img src="../_img/Migration-675px.webp" alt="" />
+                </div>
+            </nav>
+            <div class="centeralSide">
+                <h1 style="font-size: 44px">🌍 Top Travel Destinations</h1>
+
+                <h2>🏔️ Natural Wonders</h2>
+                <ul>
+                    <li>
+                        <span class="emoji">🏞️</span> <b>Grand Canyon, USA</b> – One of the most breathtaking landscapes
+                        on Earth.
+                    </li>
+                    <li>
+                        <span class="emoji">🌊</span> <b>Great Barrier Reef, Australia</b> – A paradise for divers and
+                        marine life lovers.
+                    </li>
+                    <li>
+                        <span class="emoji">❄️</span> <b>Aurora Borealis, Norway</b> – Experience the magical northern
+                        lights.
+                    </li>
+                    <li>
+                        <span class="emoji">🌋</span> <b>Mount Fuji, Japan</b> – A perfect mix of nature and culture.
+                    </li>
+                </ul>
+
+                <h2>🏙️ Iconic Cities</h2>
+                <ul>
+                    <li>
+                        <span class="emoji">🗼</span> <b>Paris, France</b> – The city of love, fashion, and the Eiffel
+                        Tower.
+                    </li>
+                    <li>
+                        <span class="emoji">🗽</span> <b>New York, USA</b> – A bustling metropolis with endless
+                        attractions.
+                    </li>
+                    <li>
+                        <span class="emoji">🏯</span> <b>Kyoto, Japan</b> – A city filled with temples, cherry blossoms,
+                        and tradition.
+                    </li>
+                    <li>
+                        <span class="emoji">🌆</span> <b>Dubai, UAE</b> – Home to the tallest building, luxury, and
+                        desert adventures.
+                    </li>
+                </ul>
+
+                <h2>🏝️ Exotic Islands</h2>
+                <ul>
+                    <li>
+                        <span class="emoji">🌴</span> <b>Bora Bora, French Polynesia</b> – Overwater bungalows in a
+                        turquoise paradise.
+                    </li>
+                    <li>
+                        <span class="emoji">🏖️</span> <b>Maldives</b> – Crystal-clear waters, coral reefs, and romantic
+                        escapes.
+                    </li>
+                    <li>
+                        <span class="emoji">⛰️</span> <b>Santorini, Greece</b> – Stunning white houses and breathtaking
+                        sunsets.
+                    </li>
+                    <li>
+                        <span class="emoji">🌺</span> <b>Bali, Indonesia</b> – A spiritual island with temples, beaches,
+                        and jungles.
+                    </li>
+                </ul>
+
+                <h2>🎭 Cultural & Historical Places</h2>
+                <ul>
+                    <li>
+                        <span class="emoji">🏛️</span> <b>Rome, Italy</b> – Walk through history with ancient ruins and
+                        the Colosseum.
+                    </li>
+                    <li><span class="emoji">🎨</span> <b>Florence, Italy</b> – The birthplace of the Renaissance.</li>
+                    <li>
+                        <span class="emoji">🐫</span> <b>Machu Picchu, Peru</b> – A mystical Incan city in the
+                        mountains.
+                    </li>
+                    <li><span class="emoji">🕌</span> <b>Petra, Jordan</b> – An ancient city carved into rock.</li>
+                </ul>
+
+                <h2>🚀 Explore the World!</h2>
+            </div>
+            <div class="bottomSide">
+                <div class="main__bottom-nav">
+                    <div class="bottom__info">
+                        <div class="bottom__logo">TriPsting</div>
+                        <div class="bottom__desc">We make it easy and fun to plan your next adventure.</div>
+                    </div>
+                    <div class="bottom__navigation">
+                        <h2 class="navText">Navigations:</h2>
+                        <p class="navBtns"><a href="/home">Home</a></p>
+                        <p class="navBtns"><a href="/routes">Routes</a></p>
+                        <p class="navBtns"><a href="/PopularPlaces">Popular places</a></p>
+                        <p class="navBtns"><a href="/tips">Tips</a></p>
+                        <p class="navBtns"><a href="/blog">Blog</a></p>
+                        <p class="navBtns"><a href="/contacts">Contact</a></p>
+                    </div>
+                    <div class="bottom__buttons">
+                        <h2>Buttons:</h2>
+                        <button>Start your trip</button>
+                        <button>Contact us</button>
+                    </div>
+                    <div class="bottom__social">
+                        <h2>Social:</h2>
+                        <div class="icons__social">
+                            <i class="fa-brands fa-telegram"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom__company">©️ 2024 TriPsting</div>
+            </div>
         </div>
+        <script src="https://kit.fontawesome.com/ce0dbffcde.js" crossorigin="anonymous"></script>
+        <script src="../otherJS/tips.js"></script>
     </body>
 </html>
