--- a/public/otherHTML/tips.html
+++ b/public/otherHTML/tips.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
         <link rel="stylesheet" href="../css/tips.css" />
         <title>Document</title>
     </head>
@@ -26,7 +28,131 @@
                     <div class="account" id="account"></div>
                 </div>
             </header>
-            <nav>Tips</nav>
+            <nav>
+                <div class="leftSide">
+                    <div class="nav__main-text animate__fadeIn animate__animated">
+                        Tips for your <br />
+                        future trips
+                    </div>
+                    <div class="nav__desc animate__animated animate__fadeInUp">
+                        On the Tips page, you can find useful advice and share your own insights. Leave your suggestions
+                        in the feedback form or reach out via email or phone. We appreciate your input and will review
+                        your ideas as soon as possible!
+                    </div>
+                    <button id="getTips" class="toSendMassage animate__animated animate__fadeInUp">Get tips</button>
+                </div>
+                <div class="rigthSide animate__animated animate__fadeInRight">
+                    <img src="../_img/Migration-675px.webp" alt="" />
+                </div>
+            </nav>
+            <div class="centeralSide">
+                <h1 style="font-size: 44px">✈️ Travel Tips</h1>
+
+                <h2>🧳 Trip Preparation</h2>
+                <ul>
+                    <li><span class="emoji">✔️</span> Plan your route in advance, but leave room for spontaneity.</li>
+                    <li>
+                        <span class="emoji">📄</span> Make copies of important documents (passport, visa, insurance) and
+                        store them in the cloud.
+                    </li>
+                    <li><span class="emoji">🌦️</span> Check the weather at your destination to pack accordingly.</li>
+                    <li>
+                        <span class="emoji">🗺️</span> Download offline maps (Google Maps, Maps.me) to navigate without
+                        the internet.
+                    </li>
+                    <li>
+                        <span class="emoji">🗣️</span> Learn a few basic phrases in the local language – it can be very
+                        helpful.
+                    </li>
+                </ul>
+
+                <h2>💰 Finance & Safety</h2>
+                <ul>
+                    <li>
+                        <span class="emoji">💳</span> Don’t keep all your money in one place, split it between cash,
+                        cards, and e-wallets.
+                    </li>
+                    <li><span class="emoji">🏦</span> Ensure your bank card works abroad and have a backup option.</li>
+                    <li>
+                        <span class="emoji">💵</span> Always carry some local currency for small purchases or transport.
+                    </li>
+                    <li>
+                        <span class="emoji">⚠️</span> Avoid displaying valuables openly to prevent attracting
+                        pickpockets.
+                    </li>
+                </ul>
+
+                <h2>🏨 Accommodation & Transport</h2>
+                <ul>
+                    <li>
+                        <span class="emoji">📅</span> Book your accommodation in advance, especially in popular
+                        destinations.
+                    </li>
+                    <li>
+                        <span class="emoji">🚆</span> Learn about public transportation – it’s often more convenient and
+                        cheaper than taxis.
+                    </li>
+                    <li>
+                        <span class="emoji">🚗</span> If renting a car, check its condition and rental terms carefully.
+                    </li>
+                </ul>
+
+                <h2>🍽️ Food & Health</h2>
+                <ul>
+                    <li><span class="emoji">🍛</span> Try local cuisine, but start small to avoid stomach issues.</li>
+                    <li><span class="emoji">💧</span> Always carry a bottle of water, especially in hot climates.</li>
+                    <li>
+                        <span class="emoji">🩹</span> Bring a basic first-aid kit, including medicine for stomach issues
+                        and allergies.
+                    </li>
+                </ul>
+
+                <h2>📸 Experience & Memories</h2>
+                <ul>
+                    <li><span class="emoji">📷</span> Don’t just take photos – enjoy the moment.</li>
+                    <li><span class="emoji">👥</span> Talk to locals, they can share hidden gems.</li>
+                    <li>
+                        <span class="emoji">🌍</span> Explore beyond tourist hotspots – you might find amazing,
+                        lesser-known places.
+                    </li>
+                </ul>
+
+                <h2>🌍 Safe Travels! 🚀</h2>
+            </div>
+            <div class="bottomSide">
+                <div class="main__bottom-nav">
+                    <div class="bottom__info">
+                        <div class="bottom__logo">TriPsting</div>
+                        <div class="bottom__desc">We make it easy and fun to plan your next adventure.</div>
+                    </div>
+                    <div class="bottom__navigation">
+                        <h2 class="navText">Navigations:</h2>
+                        <p class="navBtns"><a href="/home">Home</a></p>
+                        <p class="navBtns"><a href="/routes">Routes</a></p>
+                        <p class="navBtns"><a href="/PopularPlaces">Popular places</a></p>
+                        <p class="navBtns"><a href="/tips">Tips</a></p>
+                        <p class="navBtns"><a href="/blog">Blog</a></p>
+                        <p class="navBtns"><a href="/contacts">Contact</a></p>
+                    </div>
+                    <div class="bottom__buttons">
+                        <h2>Buttons:</h2>
+                        <button>Start your trip</button>
+                        <button>Contact us</button>
+                    </div>
+                    <div class="bottom__social">
+                        <h2>Social:</h2>
+                        <div class="icons__social">
+                            <i class="fa-brands fa-telegram"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom__company">©️ 2024 TriPsting</div>
+            </div>
         </div>
+        <script src="https://kit.fontawesome.com/ce0dbffcde.js" crossorigin="anonymous"></script>
+        <script src="../otherJS/tips.js"></script>
     </body>
 </html>
