add: some logos

--- a/public/otherHTML/routes.html
+++ b/public/otherHTML/routes.html
@@ -5,8 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../css/routes.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <link rel="icon" type="image/png" href="../_img/logoTop.png" />
 
-        <title>Document</title>
+        <title>TripSting | Routes</title>
     </head>
     <body>
         <div class="wrap">
