--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
             defer></script>
         <link rel="stylesheet" href="./css/main.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <title>Site</title>
+        <link rel="icon" type="image/png" href="./_img/logoTop.png" />
+
+        <title>TripSting | Home</title>
     </head>
     <body>
         <div class="wrap">
