--- a/public/otherHTML/blog.html
+++ b/public/otherHTML/blog.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
         <link rel="stylesheet" href="../css/blog.css" />
-        <title>Document</title>
+        <link rel="icon" type="image/png" href="../_img/logoTop.png" />
+
+        <title>TripSting | Blog</title>
     </head>
     <body>
         <div class="wrap">
