--- a/public/otherHTML/contacts.html
+++ b/public/otherHTML/contacts.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="stylesheet" href="../css/contacts.css" />
-        <title>Document</title>
+        <link rel="icon" type="image/png" href="../_img/logoTop.png" />
+
+        <title>TripSting | Contacts</title>
     </head>
     <body>
         <div class="wrap">
