--- a/public/otherHTML/popularPlaces.html
+++ b/public/otherHTML/popularPlaces.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <link rel="icon" type="image/png" href="../_img/logoTop.png" />
 
         <link rel="stylesheet" href="../css/popularPlaces.css" />
-        <title>Document</title>
+        <title>TripSting | Popular places</title>
     </head>
     <body>
         <div class="wrap">
